plugins {
    id 'java'
    id 'application'
    id 'net.ltgt.errorprone' version '3.1.0'
    id 'checkstyle'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    // Checks
    errorprone 'com.google.errorprone:error_prone_core:2.11.0'
    checkstyle 'com.puppycrawl.tools:checkstyle:9.3'

    // JUnit Jupiter test framework
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

test {
    maxHeapSize = "64m"
    useJUnitPlatform()
    jvmArgs += ["--enable-preview"]
}

checkstyle {
    configFile = new File("checkstyle.xml")
    checkstyleTest.enabled = false
}

compileJava {
    options.compilerArgs += ["--enable-preview"]

    // Enforce errors
    options.compilerArgs += ["-Werror"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}
